2003-08-28  Hans Petter Jansson  <hpj@ximian.com>

	* gui/alarm-notify/util.[ch]: Added alarm-notify utils.

	* gui/alarm-notify/Makefile.am: Added alarm-notify utils.

	* gui/alarm-notify/alarm-notify-dialog.c (timet_to_str_with_zone):
	Move to util.c.

	* gui/alarm-notify/alarm-queue.c (notify_dialog_cb)
	(on_dialog_removed_cb)
	(notify_dialog_cb)
	(tray_icon_destroyed_cb)
	(tray_icon_clicked_cb)
	(tray_icon_blink_cb)
	(display_notification): Add Rodrigo Moya's code for tray icon
	notification of appointments, with some fixes and blink code by me.
	Requires HEAD gnome-icon-theme for now.

2003-08-27  Hans Petter Jansson  <hpj@ximian.com>

	Fixes #29032.

	* gui/dialogs/task-details-page.c (status_changed): When task status
	is set to "In Progress", set percent complete to 50% only if it was
	previously set to 0% or 100%.

2003-08-27  Bolian Yin <bolian.yin@sun.com>

	* gui/Makefile.am use libevolution-calendar-a11y instead of libevolution-a11y.

2003-08-26  Jack Jia  <jack.jia@sun.com>

	** Fixes #47863.

	* gui/alarm-notify/alarm-notify.c (AlarmNotify_removeCalendar): set
	the initial value of lc_ptr and orig_str_ptr to NULL to avoid crash.

2003-08-22  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gui/alarm-notify/notify-main.c: (main):
	Ensure we get UTF-8 strings from gettext.

2003-08-22 Bolian Yin <bolian.yin@sun.com>

	Fixes #47779

	* gnome-cal.c (gnome_calendar_get_visible_time_range): fix the return value bug.

2003-08-21  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client.[ch] (cal_client_send_object): use a 'char **'
	for the 'error_msg' argument, instead of a fixed size string.

	* gui/itip-utils.c (comp_server_send): pass the correct parameter to
	cal_client_send_object.

2002-08-20  Hans Petter Jansson  <hpj@ximian.com>

	* gui/e-itip-control.c (start_defalt_server): Rename to
	start_default_server_async () and don't run a nested main loop. Let
	the caller deal with the client object and signals.